# flatboobs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.rst  cmakebuild.py  mypy.ini  pylintrc  setup.cfg  setup.py
CMake/: FlatBoobsConfig.cmake  FlatBoobsTools.cmake
cmake/: FindFlatBuffers.cmake
flatboobs/: __init__.py  __main__.py  abc.py  about.py  compat.py  constants.py  logging.py  parser.py  registry.py  schema.py  schema_loader.py  typing.py  util.py  utils.py
flatboobs/backends/: __init__.py
flatboobs/backends/fatboobs/: __init__.py  abc.py  backend.py  builder.py  container.py  dispatch.py  reader.py  table.py  template.py
flatboobs/codegen/: __init__.py  clang_format.py  cmakelists.py  cpp_format.py  filters.py  generate.py  generate_cpp.py  generate_list.py  serializer.py  sources.py  tests.py
flatboobs/codegen/utils/: filters.py  tests.py
flatboobs/serializers/fatboobs/: __init__.py  abc.py  builder.py  constants.py  enum.py  reader.py  serializer.py  skeleton.py  struct.py  table.py  template.py  typing.py
flatboobs/templates/: CMakeLists.txt
flatboobs/templates/cpp/: default_struct.hpp.txt  default_table.cpp.txt  enum.cpp.txt  enum.hpp.txt  istruct.cpp.txt  istruct.hpp.txt  main.cpp.txt  main.hpp.txt  mutable_struct.cpp.txt  mutable_struct.hpp.txt  owning_table.cpp.txt  pack_unpack.cpp.txt  pack_unpack.hpp.txt  shared_table.hpp.txt  struct.cpp.txt  struct.hpp.txt  struct_operators.cpp.txt  struct_operators.hpp.txt  table.cpp.txt  table.hpp.txt  unpacked_table.cpp.txt  unpacked_table.hpp.txt  utils.txt
flatboobs/templates/lazy.cc/: main.txt  struct.txt
flatboobs/templates/lazy.cpp/: enum.txt  main.txt  table.txt
flatboobs/templates/lazy.h/: enum.txt  main.txt  struct.txt  table.txt
flatboobs/templates/lazy.hpp/: main.txt
flatboobs/templates/pymodule/: main.txt  struct.txt  vector.txt
flatboobs/templates/serializer.cc/: main.txt  struct.txt
flatboobs/templates/serializer.h/: fields.txt  main.txt
flatboobs/templates/serializer.mod/: enum.txt
flatboobs/utils/: flatc.py
include/flatboobs/: builder.hpp  common.h  container.h  container.hpp  data.hpp  exceptions.h  exceptions.hpp  flatboobs.h  flatboobs.hpp  message.hpp  types.hpp  utils.h  utils.hpp  vector.hpp
schema/test/: enumflag.fbs  enums.fbs  scalars.fbs  struct.fbs  table.fbs  vecofscalars.fbs  vecofstructs.fbs  vecoftables.fbs
src/: Makefile  container.cpp  flatboobs.cc  flatboobs.cpp  idl.cc  idl.cpp
tests/acceptance/: Makefile  conftest.py  test_enum.py  test_flatc.py  test_scalars.py  test_struct.py  test_table.py  test_union.py
tests/acceptance/fbtest/schema/: TestEnum.fbs  TestEnum.py  TestEnumEnum.py  TestEnumFlag.py  TestScalars.fbs  TestScalars.py  TestStruct.fbs  TestStruct.py  TestStructEnum.py  TestStructStruct.py  TestTable.fbs  TestTable.py  TestTableInnerA.py  TestTableInnerB.py  TestUnion.fbs  TestUnion.py  TestUnionBar.py  TestUnionFoo.py  TestUnionFooBar.py
tests/cpp/: CMakeLists.txt  data.cpp  enumflag.cpp  enums.cpp  message.cpp  scalars.cpp  struct.cpp  table.cpp  vecofscalars.cpp  vecofstructs.cpp  vecoftables.cpp
